--- a/src/styles/pages/profile.scss
+++ b/src/styles/pages/profile.scss
@@ -5,3 +5,4 @@
 @import "../components/footer";
 @import "../layouts/l-common";
 @import "../layouts/l-page-profile";
+@import "../layouts/l-index";
