プロフィールページ・実績ページ　更新

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -6,7 +6,7 @@
 $DEFAULT_FONT_SIZE: 62.5%;
 
 // カラー
-$DEFAULT_COLOR: #9B867B;
+$DEFAULT_COLOR: #4D4D4D;
 $MAIN_GREEN: #ECF0EF;
 $TEXT_COLOR_HEADER:#D6D6D6;
 $TEXT_COLOR_CONTENT:#fefefe;
