--- a/src/styles/layouts/_l-page-profile.scss
+++ b/src/styles/layouts/_l-page-profile.scss
@@ -1,3 +1,286 @@
 /**
 * @file _l-page-profile.scss
 **/
+
+// @keyframes
+@keyframes statusbar{
+
+}
+
+// 共通部分
+  h3{
+    margin-bottom: 40px;
+    font-size: 8rem;
+    text-align: center;
+    font-weight: normal;
+  }
+
+// top
+.top{
+  margin-bottom: 260px;
+  &__wrapper{
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    height: 400px;
+    margin: 0 auto; 
+    padding: 0 5% 0 5%;
+    background: linear-gradient(to bottom, #898787, #CCCCCC);
+  }
+
+  &__title{
+    order: 2;
+    position: relative;
+    font-size: 16rem;
+    color: $TEXT_COLOR_CONTENT;
+    font-weight: normal;
+    text-align: center;
+    line-height: 400px;
+
+    &::after{
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 100px;
+      width: 100%;
+      height: 5px;
+      border-bottom: 5px solid $TEXT_COLOR_CONTENT;
+    }
+  }
+  &__image{
+    order: 1;
+    transform: translateY(-100px);
+    width: 60%;
+    height: 600px;
+    margin-right: 40px;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover
+    }
+  }
+}
+
+// introduce
+.introduce{
+  margin-bottom: 120px;
+  &__wrapper{
+    position: relative;
+    width: 90%;
+    height: 680px;
+    margin: 0 auto; 
+
+  }
+  &__content{
+    order: 2;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 66%;
+    height: 600px;
+    border: 1px solid #0e0e0e;
+    padding: 40px 0 0 40px;
+    box-shadow: 0 5px 10px rgba(0,0,0,.5);
+    font-size: 2.4rem;
+  }
+  &__image{
+    order: 1;
+    position: absolute;
+    z-index: 1;
+    width: 33%;
+    height: 600px;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  .name-ja{
+    display: block;
+    font-size: 4rem;
+  }
+  .name-en{
+    display: block;
+    font-size: 2.5rem;
+    padding-left: 5px;
+    margin-bottom: 24px;
+    color: #777777;
+  }
+  p{
+    padding-left: 80px;
+    margin-bottom: 40px;
+  }
+  .career{
+    padding-left: 40px;
+  }
+  ul{
+    padding-left: 80px;
+
+    li{
+      display: flex;
+      span{
+        display: block;
+      }
+      .date{
+        display: block;
+        width: 25%;
+        padding-left: 0;
+
+        &::before{
+          content: "▶︎";
+          display: inline-block;
+          font-size: 1.5rem;
+          transform: translateY(-2px);
+
+        }
+      }
+    }
+  }
+
+}
+// skillset
+.skill{
+  margin-bottom: 120px;
+  &__wrapper{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 auto; 
+    padding: 40px 100px;
+    border: 1px solid #0e0e0e;
+  }
+
+  &__item{
+    display: flex;
+    justify-content: space-evenly;
+    width: 45%;
+    height: 80px;
+    margin-bottom: 40px;
+    &:nth-of-type(n + 7){
+      margin-bottom: 0;
+    }
+
+
+  }
+  &__content{
+    order: 2;
+    width: 70%;
+    height: 100%;
+
+  }
+
+  &__header{
+    display: flex;
+    justify-content: space-between;
+    height: calc(100% - 24px);
+  }
+  &__name{
+    display: inline-block;
+    font-size: 3.2rem;
+    font-weight: normal;
+
+  }
+  &__ratio{
+    display: inline-block;
+    height: 100%;
+    line-height:50px;
+    font-size: 2.4rem;
+
+
+  }
+  &__bar{
+    position: relative;
+    width: 100%;
+    height: 24px;
+    border: 1px solid #0e0e0e;
+    border-radius: 24px;
+
+  }
+  &__statusbar{
+    position: absolute;
+    height: 100%;
+    border-radius: 24px;
+    background: linear-gradient(to right, #f56d96, #ffdeb8);
+    animation: statusbar;
+
+    &.ninety{
+      width: 90%;
+    }
+
+    &.eighty{
+      width: 80%;
+    }
+
+    &.seventy{
+      width: 70%;
+    }
+
+    &.sixty{
+      width: 60%;
+    }
+  }
+
+  &__icon{
+    order: 1;
+    width: 15%;
+    height: 100%;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: contain;  
+    }
+  }
+} 
+// service
+.service{
+  margin-bottom: 160px;
+
+  &__wrapper{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 95%;
+    height: 600px;
+    margin: 0 auto; 
+    padding: 48px 72px;
+    border: 1px solid #0e0e0e;
+  }
+
+  &__card{
+    width: calc(100% / 3 - 40px);
+  }
+
+  &__image{
+    width: 240px;
+    height: 240px;
+    margin: 0 auto; 
+
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      filter: grayscale(50%);
+    }
+  }
+
+  &__content{
+    h4{
+      text-align: center;
+      font-size: 4rem;
+    }
+
+    span{
+      display: block;
+      text-align: center;
+    }
+
+    p{
+      padding: 24px;
+      text-align: justify;
+    }
+  }
+
+
+}
