--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -55,6 +55,12 @@ nav.menu-container-pc {
       a {
         font-size: 2.4rem;
         color: $TEXT_COLOR_HEADER;
+        transition: 0.5s all;
+
+        &:hover{
+          color: #bd6c6c;
+          transition: 0.5s all;
+        }
         span{
           display: block;
         }
