--- a/src/styles/layouts/_l-index.scss
+++ b/src/styles/layouts/_l-index.scss
@@ -106,8 +106,8 @@ main{
     position: absolute;
     z-index: -100;
     top: 0;
-    width: 100%;
-    height: 700px;
+    width: 100vw;
+    height: 100vh;
 
     img{
       width: 100%;
@@ -120,7 +120,7 @@ main{
   // profile
   .profile{
     margin-bottom: 120px;
-    padding-top: 700px;
+    padding-top: 100vh;
 
     &__content{
       order: 2;
