--- a/src/styles/layouts/_l-page-works.scss
+++ b/src/styles/layouts/_l-page-works.scss
@@ -62,11 +62,12 @@
   }
   &__card{
     width: calc(100% / 2 - 40px);
+    height: 100%;
   }
   &__image{
     display: block;
     width: 100%;
-    height: 70%;
+    height: 450px;
     margin-bottom: 40px;
     border: 1px solid #0e0e0e;
 
@@ -84,8 +85,12 @@
 
   }
   &__content{
-
     text-align: justify;
+    font-size: 2rem;
+  }
+  .hr{
+    display: inline-block;
+    margin-bottom: 8px;
   }
 }
 
@@ -93,7 +98,7 @@
 .sub-works{
   margin-bottom: 160px;
   &__slider{
-      width: 80%;
+      width: calc(80% + 40px);
       margin: 0 auto; 
   }
 
