--- a/src/styles/layouts/_l-common.scss
+++ b/src/styles/layouts/_l-common.scss
@@ -47,6 +47,52 @@ a {
   text-decoration: none;
 }
 
+.inner{
+  width: 80%;
+  margin: 0 auto; 
+}
+
+// profile works contactのtop部分
+.top{
+  margin-bottom: 260px;
+  &__wrapper{
+    display: flex;
+    justify-content: space-between;
+    height: 400px;
+    padding: 0 5% 0 5%;
+    background: linear-gradient(to bottom, #898787, #CCCCCC);
+  }
+
+  &__title{
+    position: relative;
+    font-size: 16rem;
+    color: $TEXT_COLOR_CONTENT;
+    font-weight: normal;
+    text-align: center;
+    line-height: 400px;
+
+    &::after{
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 100px;
+      width: 100%;
+      height: 5px;
+      border-bottom: 5px solid $TEXT_COLOR_CONTENT;
+    }
+  }
+  &__image{
+    transform: translateY(-50px);
+    width: 60%;
+    height: 500px;
+    margin-right: 40px;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover
+    }
+  }
+}
 
 // 下からフェードインする要素に付与するクラス
 .fade-in-bottom {
