--- a/src/styles/layouts/_l-page-works.scss
+++ b/src/styles/layouts/_l-page-works.scss
@@ -5,46 +5,13 @@
 
 // top
 .top{
-  margin-bottom: 260px;
-  &__wrapper{
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    height: 400px;
-    margin: 0 auto; 
-    padding: 0 5% 0 5%;
-    background: linear-gradient(to bottom, #898787, #CCCCCC);
-  }
 
   &__title{
-    position: relative;
-    font-size: 16rem;
-    color: $TEXT_COLOR_CONTENT;
-    font-weight: normal;
-    text-align: center;
-    line-height: 400px;
-    margin-right: 40px;
-
-    &::after{
-      content: "";
-      display: block;
-      position: absolute;
-      bottom: 100px;
-      width: 100%;
-      height: 5px;
-      border-bottom: 5px solid $TEXT_COLOR_CONTENT;
-    }
+    order: 1;
+    margin-right: 120px;
   }
   &__image{
-    transform: translateY(-100px);
-    width: 60%;
-    height: 600px;
-    
-    img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover
-    }
+    order: 2;
   }
 }
 
@@ -56,8 +23,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 80%;
-    margin: 0 auto; 
+
 
   }
   &__card{
