--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -7,6 +7,7 @@ $DEFAULT_FONT_SIZE: 62.5%;
 
 // カラー
 $DEFAULT_COLOR: #4D4D4D;
+$ATTENTION: #b90000;
 $MAIN_GREEN: #ECF0EF;
 $TEXT_COLOR_HEADER:#D6D6D6;
 $TEXT_COLOR_CONTENT:#fefefe;
