--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -25,7 +25,7 @@
       color: $TEXT_COLOR_HEADER;
       }
       &::first-letter{
-        color: #7c0000;
+        color: $ATTENTION;
       }
     }
   }
@@ -45,7 +45,9 @@ nav.menu-container-pc {
       text-align: center;
 
       &:nth-of-type(1){
-        border: 1px solid $TEXT_COLOR_HEADER;
+        a{
+          color:$ATTENTION;
+        }
       }
 
       &:last-child{
@@ -58,7 +60,7 @@ nav.menu-container-pc {
         transition: 0.5s all;
 
         &:hover{
-          color: #bd6c6c;
+          color:$ATTENTION;
           transition: 0.5s all;
         }
         span{
@@ -69,21 +71,49 @@ nav.menu-container-pc {
   }
 }
 
-nav.menu-container-sp {
-  margin-left: auto;
+// レスポンシブ【sp】
+.menu-container-sp {
   position: relative;
+  z-index:1000;
+  
   .menu-sp {
     display: none;
     position: absolute;
-    right: 0;
-    width: 300px;
+    width: 100vw;
     .menu-item {
       display: block;
+      height: calc(100vh / 4 - 50px);
+      @include MEDIA_SP {
+        height: calc(100vh / 4 - 50px);
+      }
       padding: 20px 0;
       text-align: center;
       border-bottom: 1px solid #e0e0e0;
+      background-color: #0e0e0e;
+      opacity: 0.8;
       a {
-        color: $DEFAULT_COLOR;
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 100%;
+        color: $TEXT_COLOR_CONTENT;
+        text-align: center;
+      }
+      &__container{
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+      span{
+        display: inline-block;
+        font-size: 4rem;
+        @include MEDIA_SP {
+          font-size: 2rem;
+        }
+
+        &:first-of-type{
+          margin-right: 24px;
+        }
       }
     }
   }
@@ -108,7 +138,7 @@ nav.menu-container-sp {
     left: 0;
     width: 100%;
     height: 2px;
-    background-color: $DEFAULT_COLOR;
+    background-color: $TEXT_COLOR_CONTENT;
     border-radius: 0.4rem;
     &:first-child {
       top: 0;
@@ -148,10 +178,14 @@ nav.menu-container-sp {
       .menu {
         .menu-item {
           &:nth-of-type(1){
-            border: none;
+            a{
+            color: $TEXT_COLOR_HEADER;
+            }
           }
           &:nth-of-type(2){
-            border: 1px solid $TEXT_COLOR_HEADER;
+            a{
+              color:$ATTENTION;
+            }
           }
         }
       }
@@ -163,10 +197,14 @@ nav.menu-container-sp {
       .menu {
         .menu-item {
           &:nth-of-type(1){
-            border: none;
+            a{
+              color: $TEXT_COLOR_HEADER;
+            }
           }
-            &:nth-of-type(3){
-            border: 1px solid $TEXT_COLOR_HEADER;
+          &:nth-of-type(3){
+            a{
+              color:$ATTENTION;
+            }
           }
         }
       }
@@ -179,10 +217,14 @@ nav.menu-container-sp {
       .menu {
         .menu-item {
           &:nth-of-type(1){
-            border: none;
+            a{
+              color: $TEXT_COLOR_HEADER;
+            }  
           }
-            &:nth-of-type(3){
-            border: 1px solid $TEXT_COLOR_HEADER;
+          &:nth-of-type(3){
+            a{
+              color:$ATTENTION;
+            }
           }
         }
       }
@@ -195,10 +237,14 @@ nav.menu-container-sp {
       .menu {
         .menu-item {
           &:nth-of-type(1){
-            border: none;
+            a{
+              color: $TEXT_COLOR_HEADER;
+            }  
           }
           &:nth-of-type(4){
-            border: 1px solid $TEXT_COLOR_HEADER;
+            a{
+              color:$ATTENTION;
+            }
           }
         }
       }
