--- a/src/styles/layouts/_l-page-contact.scss
+++ b/src/styles/layouts/_l-page-contact.scss
@@ -5,11 +5,92 @@
 
 // top
 .top{
-
+  margin-bottom: 160px;
   &__title{
     order: 2;
+    font-size: 14rem;
   }
   &__image{
     order: 1;
+  }
+}
+
+.contact{
+  margin-bottom: 160px;
+
+  &__wrapper{
+    width: 30%;
+    margin: 0 auto; 
+  }
+  &__title{
+    margin-bottom: 40px;
+    text-align: center;
+    font-size: 4rem;
+  }
+  h3{
+    font-size: 2.4rem;
+    margin-bottom: 20px;
+  }
+
+  &__twitter{
+    margin-bottom: 80px;
+    p{
+      margin-bottom: 20px;
+    }
+  }
+  &__twitterbtn{
+    display: block;
+    width: 400px;
+    height: 60px;
+    line-height: 60px;
+    margin: 0 auto; 
+    border: 1px solid #0e0e0e;
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+    font-size: 1.6rem;
+    color: #fefefe;
+    background-color: #707070;
+    transition: 0.5s all;
+      
+    &:hover{
+    color: #707070;
+    background-color: #fefefe;
+    transition: 0.5s all;
+    }
+  }
+  &__mail{
+    p{
+      margin-bottom: 24px;
+    }
+    input{
+      width: 100%;
+      padding: 16px;
+      border: 1px solid #0e0e0e;
+      border-radius: 5px;
+    }
+    textarea{
+      width: 100%;
+      padding: 16px;
+      border: 1px solid #0e0e0e;
+      border-radius: 5px;
+    }
+    input[type="submit"]{
+      cursor: pointer;
+      font-size: 1.6rem;
+      color: #fefefe;
+      background-color: #707070;
+      border-radius: 5px;
+      transition: 0.5s all;
+      
+      &:hover{
+      color: #707070;
+      background-color: #fefefe;
+      transition: 0.5s all;
+      }
+    }
+    div.wpcf7 .ajax-loader{
+      display: none;
+    }
   }
 }
