--- a/src/styles/layouts/_l-index.scss
+++ b/src/styles/layouts/_l-index.scss
@@ -41,7 +41,7 @@ main{
       height: 1000px;
     }
     @include MEDIA_SP {
-      height: 800px;
+      height: 700px;
     }
   }
 
@@ -63,7 +63,7 @@ main{
       padding-top: 40px;
     }
     @include MEDIA_SP{
-      height: 350px;
+      height: 300px;
       padding-top: 20px;
     }
     
@@ -91,7 +91,7 @@ main{
       padding-left: 40px;
       @include MEDIA_SP{
         padding-left: 0;
-        font-size: 4rem;
+        font-size: 3.2rem;
         text-align: center;
       }
     }
@@ -100,7 +100,7 @@ main{
       padding-left: 80px;
       @include MEDIA_SP{
         padding-left: 0;
-        font-size: 2rem;
+        font-size: 1.6rem;
         text-align: center;
       }
     }
@@ -123,6 +123,10 @@ main{
         right: auto;
         left: 50%;
         transform: translateX(-50%);
+        width: 90%;
+        height: 60px;
+        line-height: 60px;
+        font-size: 3.2rem;
       }
 
       &:hover{
@@ -189,7 +193,7 @@ main{
       width: 650px;
       @include MEDIA_SP{
         left: 5vw;
-        width: 320px;
+        width: 300px;
       }
 
       &::before{
@@ -224,7 +228,7 @@ main{
         -ms-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
         @include MEDIA_SP{
-          font-size: 3rem;
+          font-size: 2.4rem;
         }
       }
     }
