--- a/src/styles/layouts/_l-common.scss
+++ b/src/styles/layouts/_l-common.scss
@@ -51,7 +51,7 @@ a {
   width: 80%;
   margin: 0 auto; 
 
-  @include MEDIA_SP {
+  @include MEDIA_TAB {
     width: 90%;
   }
 }
@@ -59,12 +59,21 @@ a {
 // profile works contactのtop部分
 .top{
   margin-bottom: 260px;
+  @include MEDIA_TAB {
+    margin-bottom: 120px;
+  }
+  @include MEDIA_TAB {
+    margin-bottom: 80px;
+  }
   &__wrapper{
     display: flex;
     justify-content: space-between;
     height: 400px;
     padding: 0 5% 0 5%;
     background: linear-gradient(to bottom, #898787, #CCCCCC);
+    @include MEDIA_SP {
+      height: 320px;
+    }
   }
 
   &__title{
@@ -74,6 +83,13 @@ a {
     font-weight: normal;
     text-align: center;
     line-height: 400px;
+    @include MEDIA_TAB {
+      width: 100%;
+    }
+    @include MEDIA_SP {
+      font-size: 8rem;
+      line-height: 320px;
+    }
 
     &::after{
       content: "";
@@ -90,6 +106,9 @@ a {
     width: 60%;
     height: 500px;
     margin-right: 40px;
+    @include MEDIA_TAB {
+      display: none;
+    }
     img{
       width: 100%;
       height: 100%;
