--- a/src/styles/layouts/_l-page-profile.scss
+++ b/src/styles/layouts/_l-page-profile.scss
@@ -34,14 +34,21 @@
 // introduce
 .introduce{
   margin-bottom: 120px;
+  @include MEDIA_TAB{
+    margin-bottom: 80px;
+  }
 
   &__wrapper{
     position: relative;
     height: 680px;
+    @include MEDIA_TAB{
+      display: flex;
+      flex-direction: column-reverse;
+      height: auto;
+    }
   }
 
   &__content{
-    order: 2;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -51,13 +58,29 @@
     padding: 40px 0 0 40px;
     box-shadow: 0 5px 10px rgba(0,0,0,.5);
     font-size: 2.4rem;
+    @include MEDIA_TAB{
+      position: static;
+      width: 100%;
+      height: auto;
+      padding: 5% 5%;
+      font-size: 1.6rem;
+    }
   }
   &__image{
-    order: 1;
     position: absolute;
     z-index: 1;
     width: 33%;
     height: 600px;
+    @include MEDIA_TAB{
+      position: static;
+      width: 50%;
+      height: 400px;
+      margin: 0 auto 40px; 
+    }
+    @include MEDIA_SP{
+      width: 100%;
+      height: 300px;
+    }
     img{
       width: 100%;
       height: 100%;
@@ -68,6 +91,9 @@
   .name-ja{
     display: block;
     font-size: 4rem;
+    @include MEDIA_SP{
+      font-size: 3.2rem;
+    }
   }
   .name-en{
     display: block;
@@ -75,32 +101,66 @@
     padding-left: 5px;
     margin-bottom: 24px;
     color: #777777;
+    @include MEDIA_SP{
+      font-size: 2rem;
+    }
   }
   p{
     padding-left: 80px;
     margin-bottom: 40px;
+    @include MEDIA_TAB{
+      padding-left: 40px;
+    }
+    @include MEDIA_SP{
+      padding-left: 0;
+    }
   }
   .career{
     padding-left: 40px;
+    @include MEDIA_TAB{
+      padding-left: 20px;
+    }
+    @include MEDIA_SP{
+      padding-left: 0;
+    }
   }
   ul{
     padding-left: 80px;
+    @include MEDIA_TAB{
+      padding-left: 40px;
+    }
+    @include MEDIA_SP{
+      padding-left: 0;
+    }
 
     li{
       display: flex;
+      @include MEDIA_SP{
+        font-size: 1.2rem;
+      }
       span{
         display: block;
+        @include MEDIA_SP{
+          width: 70%;
+        }
       }
       .date{
         display: block;
         width: 25%;
         padding-left: 0;
+        @include MEDIA_SP{
+          width: 30%;
+        }
 
         &::before{
           content: "▶︎";
           display: inline-block;
           font-size: 1.5rem;
           transform: translateY(-2px);
+          @include MEDIA_SP{
+            font-size: 1.2rem;
+            transform: translateY(0);
+          }
 
         }
       }
@@ -111,12 +171,21 @@
 // skillset
 .skill{
   margin-bottom: 120px;
+  @include MEDIA_TAB{
+    margin-bottom: 80px;
+  }
   &__wrapper{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 40px 100px;
+    padding-bottom: 0px;
     border: 1px solid #0e0e0e;
+    @include MEDIA_TAB{
+      padding: 20px 0;
+      padding-bottom: 0px;
+    }
+
   }
 
   &__item{
@@ -125,11 +194,10 @@
     width: 45%;
     height: 80px;
     margin-bottom: 40px;
-    &:nth-of-type(n + 7){
-      margin-bottom: 0;
+
+    @include MEDIA_SP{
+      width: 100%;
     }
-
-
   }
   &__content{
     order: 2;
@@ -147,6 +215,10 @@
     display: inline-block;
     font-size: 3.2rem;
     font-weight: normal;
+    @include MEDIA_SP {
+      font-size: 2.4rem;
+      padding-top: 10px;
+    } 
 
   }
   &__ratio{
@@ -154,9 +226,11 @@
     height: 100%;
     line-height:50px;
     font-size: 2.4rem;
-
-
+    @include MEDIA_SP {
+      font-size: 2rem;
+    } 
   }
+
   &__bar{
     width: 100%;
     height: 24px;
@@ -187,7 +261,7 @@
     background: linear-gradient(to right, #f56d96, #ffdeb8);
     
     &.move{
-    animation: statusbar  3s ease .5s 1 forwards;
+    animation: statusbar 1.5s ease .5s 1 forwards;
     }
   }
 
@@ -195,6 +269,9 @@
     order: 1;
     width: 15%;
     height: 100%;
+    @include MEDIA_SP{
+      width: 20%;
+    }
     img{
       width: 100%;
       height: 100%;
@@ -205,18 +282,33 @@
 // service
 .service{
   margin-bottom: 160px;
+  @include MEDIA_TAB{
+    margin-bottom: 120px;
+  }
 
   &__wrapper{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    height: 600px;
     padding: 48px 72px;
     border: 1px solid #0e0e0e;
+    @include MEDIA_TAB{
+      height: auto;
+      padding: 32px 20px;
+    }
+    @include MEDIA_SP{
+      padding: 32px 0;
+    }
   }
 
   &__card{
     width: calc(100% / 3 - 40px);
+    @include MEDIA_TAB{
+      width: calc(100% / 3 - 10px);
+    }
+    @include MEDIA_SP{
+      width: 100%;
+    }
   }
 
   &__image{
@@ -237,6 +329,11 @@
       text-align: center;
       font-size: 4rem;
     }
+    .text-sp{
+      @include MEDIA_SP{
+          font-size: 3.4rem;
+        }
+      }
 
     span{
       display: block;
@@ -248,6 +345,4 @@
       text-align: justify;
     }
   }
-
-
 }
