--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -105,3 +105,31 @@
 
   }
 }
+
+// ページtopに戻るボタン
+.top-btn{
+  position: fixed;
+  z-index: 100;
+  right: 20px;
+  bottom: 100px;
+  width: 50px;
+  height: 50px;
+  background-color: #0e0e0e;
+  opacity: .6;
+  text-align: center;
+  line-height: 50px;
+  display: none;
+  
+  &.is-over{
+    @include MEDIA_TAB{
+      display: block;
+    } 
+  }
+
+  a{
+      display: block;
+      width: 100%;
+      height: 100%;
+      color: #fefefe;
+  }
+}
