アニメーション修正

--- a/src/styles/layouts/_l-page-contact.scss
+++ b/src/styles/layouts/_l-page-contact.scss
@@ -113,5 +113,13 @@
     div.wpcf7 .ajax-loader{
       display: none;
     }
+    .confirm{
+      display: inline-block;
+      width: 30px;
+      height: 21px;
+    }
+    .wpcf7-list-item-label{
+      display: inline-block;
+    }
   }
 }
