--- a/src/styles/layouts/_l-page-works.scss
+++ b/src/styles/layouts/_l-page-works.scss
@@ -15,6 +15,7 @@
   }
   &__image{
     order: 2;
+    filter: grayscale(0.8);
   }
 }
 
@@ -58,6 +59,39 @@
       height: 100%;
       object-fit: cover;
       object-position: top;
+    }
+
+    &-filter{
+      position: relative;
+      top: -100%;
+      z-index: 100;
+      width: 100%;
+      height: 100%;
+      background-color: #0e0e0e;
+      opacity: 0.5;
+      transition: 0.5s;
+      span{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        display: block;
+        width: 200px;
+        margin: 0 auto;
+        color: $TEXT_COLOR_CONTENT;
+        font-size: 2.4rem;
+        text-align: center;
+      }
+    }
+    &:hover{
+      .main-works__image-filter{
+      height: 0%;
+      transition: 0.5s;
+
+      span{
+        display: none;
+      }
+      }
     }
   }
   &__title{
